# breast-ai-clinical-validation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-models.txt  requirements.txt
docs/: 2d_pipeline.md  3d_pipeline.md  cbis_ddsm_validation_report.html  datasets.md  duke_dbt_froc_report.html  methodology.md  metrics_reference.md
examples/: demo_synthetic.py
mammoval/: __init__.py  pipeline.py  plotting.py  report.py
mammoval/data/: __init__.py  base.py  cbis_ddsm.py  duke_dbt.py
mammoval/metrics/: __init__.py  _common.py  bootstrap.py  calibration.py  classification.py  delong.py  localization.py  screening.py  subgroups.py
mammoval/models/: __init__.py  adapters_2d.py  adapters_3d.py  base.py  finetune.py  inference.py  linear_probe.py  synthetic.py
notebooks/: 01_validation_2d_cbis_ddsm.ipynb  02_validation_3d_duke_dbt.ipynb
scripts/: build_notebooks.py  download_cbis_ddsm.py  run_validation.py
tests/: test_duke_dbt.py  test_finetune.py  test_linear_probe.py  test_localization.py  test_metrics.py  test_pipeline.py
